--- a/admin-pannel/src/views/pages/login/Login.css
+++ b/admin-pannel/src/views/pages/login/Login.css
@@ -5,14 +5,32 @@
   
   @media (max-width: 768px) {
     .signup-card {
-      width: 100%; /* Ensure card is full width on medium screens */
+      width: 100%;
+      margin-left: -150px; /* Ensure card is full width on medium screens */
     }
   }
   
   @media (max-width: 576px) {
     .signup-card {
       width: 100%; /* Ensure card is full width on small screens */
-      padding: 1rem; /* Adjust padding for smaller screens */
+      padding: 1rem;
+      margin-left: -100px; /* Adjust padding for smaller screens */
     }
   }
   
+  checkbox-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 1rem;
+    
+  }
+  
+  .checkbox-container input[type="checkbox"] {
+    margin-right: 0.5rem;
+    margin-left: -180px;
+  }
+  
+  .checkbox-container span {
+    font-size: 0.875rem;
+    color: #6c757d;
+  }
